feat: atualiza documentação da API com novos endpoints e respostas; otimiza DTOs para detalhes de livro e atualização de livro